Adjusted the api to only take post requests
That is done so that the user of the api can be required to send in authentication credentials.
